--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -32,7 +32,8 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 	<typeAlias alias="SupplierContactsDataObject"		type="DataAccessLayer.DataObjects.SupplierContactsDataObject" />
 	<typeAlias alias="SuppliersVisitDataObject"			type="DataAccessLayer.DataObjects.SupplierVisitDataObject" />
 	<typeAlias alias="SupplierMonitoringDataObject"		type="DataAccessLayer.DataObjects.SupplierMonitoringDataObject" />
-	<typeAlias alias="PageParameter"			type="DataAccessLayer.DataObjects.PageParameterObject" />
+	<typeAlias alias="PageParameter"		        	type="DataAccessLayer.DataObjects.PageParameterObject" />
+	<typeAlias alias="AccountDataObject"          		type="DataAccessLayer.DataObjects.AccountDataObject"/>
 </alias>  
   <sqlMaps>
 	<sqlMap uri="ChargeTypes.xml"/>
