--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -78,6 +78,7 @@
     <Compile Include="DataObjects\GrupoVehiculoDataObject.cs" />
     <Compile Include="DataObjects\PageParameterObject.cs" />
     <Compile Include="DataObjects\SupplierAccountObjectInfo.cs" />
+    <Compile Include="DataObjects\SupplierAssuranceDataObject.cs" />
     <Compile Include="DataObjects\SupplierContactsDataObject.cs" />
     <Compile Include="DataObjects\SupplierEvaluationDataObject.cs" />
     <Compile Include="DataObjects\SupplierInfoDataObject.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="DataObjects\SupplierProvinceDataObject.cs" />
     <Compile Include="DataObjects\SuppliersBranchesDataObject.cs" />
     <Compile Include="DataObjects\SupplierSummaryDataObject.cs" />
+    <Compile Include="DataObjects\SupplierTransportDataObject.cs" />
     <Compile Include="DataObjects\SupplierTypeDataObject.cs" />
     <Compile Include="DataObjects\SupplierVisitDataObject.cs" />
     <Compile Include="DataServiceImplementation.cs" />
