--- a/src/DALModule/KarveDataServices/KarveDataServices.csproj
+++ b/src/DALModule/KarveDataServices/KarveDataServices.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KarveDataServices</RootNamespace>
     <AssemblyName>KarveDataServices</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,10 +51,10 @@
     <Compile Include="DataObjects\ISupplierTypeData.cs" />
     <Compile Include="DataObjects\ISupplierVisitData.cs" />
     <Compile Include="IHelperDataServices.cs" />
-    <Compile Include="ISupplierDataServices.cs" />
     <Compile Include="IDataServices.cs" />
     <Compile Include="IPaymentDataService.cs" />
     <Compile Include="DataObjects\ISupplierEvaluationNoteData.cs" />
+    <Compile Include="ISupplierDataServices.cs" />
     <Compile Include="IVehicleDataServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
