--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KarveCommon</RootNamespace>
     <AssemblyName>KarveCommon</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -34,6 +34,7 @@
     <Reference Include="Dragablz">
       <HintPath>..\..\lib\Dragablz.dll</HintPath>
     </Reference>
+    <Reference Include="iAnywhere.Data.SQLAnywhere.v4.5, Version=16.0.0.13244, Culture=neutral, PublicKeyToken=f222fc4333e0d400, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
@@ -61,8 +62,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Generic\CommonString.cs" />
+    <Compile Include="Generic\AbstractSqlQueryExecutor.cs" />
     <Compile Include="Generic\EnvirommentConfig.cs" />
+    <Compile Include="Generic\IDBParameter.cs" />
+    <Compile Include="Generic\ISQLQueryExecutor.cs" />
+    <Compile Include="Generic\OdbcQueryExecutor.cs" />
+    <Compile Include="Generic\OleDbQueryExecutor.cs" />
+    <Compile Include="Generic\SQLQueryExecutor.cs" />
     <Compile Include="Services\EventManager.cs" />
     <Compile Include="Services\IEnviromentVariables.cs" />
     <Compile Include="Services\IEventManager.cs" />
