--- a/src/PaymentsTypeModule/PaymentTypeModule.csproj
+++ b/src/PaymentsTypeModule/PaymentTypeModule.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Reference Include="ExtendedGrid, Version=4.5.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\KarveCar\lib\ExtendedGrid.dll</HintPath>
+      <HintPath>..\..\lib\ExtendedGrid.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
