--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -107,8 +107,12 @@
     <Compile Include="DataObjects\OrigenCliente.cs" />
     <Compile Include="DataObjects\Poblacion.cs" />
     <Compile Include="DataUpdateException.cs" />
+    <Compile Include="GruposDAL.cs" />
+    <Compile Include="Logic\ErroresDAL.cs" />
+    <Compile Include="Logic\GenericDAL.cs" />
     <Compile Include="HelperDataAccessLayer.cs" />
     <Compile Include="HelperDataServicesImplementation.cs" />
+    <Compile Include="Logic\SQL_EditDAL.cs" />
     <Compile Include="MarcasDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Provincia.cs" />
@@ -127,6 +131,7 @@
     <Compile Include="DataObjects\UsoAlquiler.cs" />
     <Compile Include="DataObjects\ZonaCliente.cs" />
     <Compile Include="DataObjects\ZonaOficina.cs" />
+    <Compile Include="Logic\RuleDAL.cs" />
     <Compile Include="SupplierDataAccessLayer.cs" />
     <Compile Include="SupplierDataServiceAccessDeniedException.cs" />
     <Compile Include="SupplierDataServicesAccessModifiedException.cs" />
