--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Base\TestEnviromentVariables.cs" />
     <Compile Include="DAL\BankAccessLayerTest.cs" />
+    <Compile Include="DAL\GruposTS.cs" />
     <Compile Include="DAL\MarcasTS.cs" />
     <Compile Include="DAL\TestSupplierDataServicesLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
