--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -425,6 +425,10 @@
     <Resource Include="Images\video.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Controls\KarveControls\KarveControls.csproj">
+      <Project>{183a9ec4-dc89-411d-975d-c67fa4c01747}</Project>
+      <Name>KarveControls</Name>
+    </ProjectReference>
     <ProjectReference Include="KarveCommon\KarveCommon.csproj">
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCommon</Name>
