--- a/src/Controls/KarveControls/DataGrid/KarveGridTest/KarveGridTest/KarveGridTest.csproj
+++ b/src/Controls/KarveControls/DataGrid/KarveGridTest/KarveGridTest/KarveGridTest.csproj
@@ -93,5 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\KarveGrid\KarveGrid.csproj">
+      <Project>{FE801010-11D5-43AC-831A-80363EEC3E24}</Project>
+      <Name>KarveGrid</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
