This is the last version corrected with CRUD in a module. Delete, Insert, Update works fine using the toolbar.

--- a/src/Controls/KarveControls/KarveControls.csproj
+++ b/src/Controls/KarveControls/KarveControls.csproj
@@ -231,6 +231,7 @@
     <Compile Include="UIObjects\UiConstant.cs" />
     <Compile Include="UIObjects\UiDataCombox.cs" />
     <Compile Include="UIObjects\UiDataFieldCheckBox.cs" />
+    <Compile Include="UIObjects\UiDataTable.cs" />
     <Compile Include="UIObjects\UiDatePicker.cs" />
     <Compile Include="UIObjects\UiEmailDataField.cs" />
     <Compile Include="UIObjects\UiGroupBoxMultipleObject.cs" />
