--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Generic\AbstractSqlQueryExecutor.cs" />
     <Compile Include="Generic\AbstractSqlSession.cs" />
+    <Compile Include="Generic\CrossReferenceValidationRule.cs" />
     <Compile Include="Generic\DataLayerException.cs" />
     <Compile Include="Generic\EnvirommentConfig.cs" />
     <Compile Include="Generic\GenericSQL.cs" />
@@ -79,9 +80,11 @@
     <Compile Include="Generic\ISQLQueryExecutor.cs" />
     <Compile Include="Generic\ISqlSession.cs" />
     <Compile Include="Generic\KarveViewModelBase.cs" />
+    <Compile Include="Generic\RemoveDuplicateSqlValidationRule.cs" />
     <Compile Include="Generic\OdbcQueryExecutor.cs" />
     <Compile Include="Generic\OleDbQueryExecutor.cs" />
-    <Compile Include="Services\EventManager.cs" />
+    <Compile Include="Generic\SqlValidationRule.cs" />
+    <Compile Include="Services\EventDispatcher.cs" />
     <Compile Include="Services\IEnviromentVariables.cs" />
     <Compile Include="Services\IEventManager.cs" />
     <Compile Include="Services\IEventObserver.cs" />
