--- a/src/KarveCommon/packages.config
+++ b/src/KarveCommon/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
-  <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net45" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
