--- a/test/KarveTest/KarveTest/packages.config
+++ b/test/KarveTest/KarveTest/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.0" targetFramework="net461" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net461" />
@@ -8,6 +8,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="ExtendedXmlSerializer" version="1.5.0" targetFramework="net461" />
   <package id="iAnywhere.Data.SQLAnywhere.v4.5" version="16.0.0.20433" targetFramework="net461" />
+  <package id="Moq" version="4.7.145" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="NUnit.Console" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
